--- a/slides/css/theme/night-gkapfham.css
+++ b/slides/css/theme/night-gkapfham.css
@@ -90,22 +90,25 @@ body {
  *********************************************/
 .reveal .controls div.navigate-left,
 .reveal .controls div.navigate-left.enabled {
-    border-right-color: #e7ad52; 
+    border-right-color: #df8700; 
 }
 
 .reveal .controls div.navigate-right,
 .reveal .controls div.navigate-right.enabled {
-    border-left-color: #e7ad52; 
+    border-left-color: #df8700; 
+    /* border-left-color: #e7ad52;  */
 }
 
 .reveal .controls div.navigate-up,
 .reveal .controls div.navigate-up.enabled {
-    border-bottom-color: #e7ad52; 
+    border-bottom-color: #df8700; 
+    /* border-bottom-color: #e7ad52;  */
 }
 
 .reveal .controls div.navigate-down,
 .reveal .controls div.navigate-down.enabled {
-    border-top-color: #e7ad52; 
+    border-top-color: #df8700; 
+    /* border-top-color: #e7ad52;  */
 }
 
 .reveal .controls div.navigate-left.enabled:hover {
