--- a/slides/css/reveal.css
+++ b/slides/css/reveal.css
@@ -318,11 +318,12 @@ body {
 .reveal pre {
 	display: block;
 	position: relative;
-	width: 90%;
+	width: 100%;
 	margin: 15px auto;
 
 	text-align: left;
-	font-size: 0.55em;
+	/* font-size: 0.55em; */
+	font-size: 0.85em;
 	font-family: monospace;
 	line-height: 1.2em;
 
@@ -336,7 +337,7 @@ body {
 .reveal pre code {
 	padding: 5px;
 	overflow: auto;
-	max-height: 400px;
+	max-height: 800px;
 	word-wrap: normal;
 }
 .reveal pre.stretch code {
